# serializer version: 1
# name: test_entities[button.samsung_tv_channel_down-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.samsung_tv_channel_down',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Channel down',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Channel down',
    'platform': 'samsung_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'channel_down',
    'unique_id': '01JTEST0000000000000000000_channel_down',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.samsung_tv_channel_down-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Samsung TV Channel down',
    }),
    'context': <ANY>,
    'entity_id': 'button.samsung_tv_channel_down',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.samsung_tv_channel_up-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.samsung_tv_channel_up',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Channel up',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Channel up',
    'platform': 'samsung_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'channel_up',
    'unique_id': '01JTEST0000000000000000000_channel_up',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.samsung_tv_channel_up-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Samsung TV Channel up',
    }),
    'context': <ANY>,
    'entity_id': 'button.samsung_tv_channel_up',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.samsung_tv_down-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.samsung_tv_down',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Down',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Down',
    'platform': 'samsung_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'down',
    'unique_id': '01JTEST0000000000000000000_down',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.samsung_tv_down-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Samsung TV Down',
    }),
    'context': <ANY>,
    'entity_id': 'button.samsung_tv_down',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.samsung_tv_exit-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.samsung_tv_exit',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Exit',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Exit',
    'platform': 'samsung_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'exit',
    'unique_id': '01JTEST0000000000000000000_exit',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.samsung_tv_exit-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Samsung TV Exit',
    }),
    'context': <ANY>,
    'entity_id': 'button.samsung_tv_exit',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.samsung_tv_hdmi_1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.samsung_tv_hdmi_1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'HDMI 1',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'HDMI 1',
    'platform': 'samsung_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'hdmi_1',
    'unique_id': '01JTEST0000000000000000000_hdmi_1',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.samsung_tv_hdmi_1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Samsung TV HDMI 1',
    }),
    'context': <ANY>,
    'entity_id': 'button.samsung_tv_hdmi_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.samsung_tv_hdmi_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.samsung_tv_hdmi_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'HDMI 2',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'HDMI 2',
    'platform': 'samsung_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'hdmi_2',
    'unique_id': '01JTEST0000000000000000000_hdmi_2',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.samsung_tv_hdmi_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Samsung TV HDMI 2',
    }),
    'context': <ANY>,
    'entity_id': 'button.samsung_tv_hdmi_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.samsung_tv_hdmi_3-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.samsung_tv_hdmi_3',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'HDMI 3',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'HDMI 3',
    'platform': 'samsung_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'hdmi_3',
    'unique_id': '01JTEST0000000000000000000_hdmi_3',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.samsung_tv_hdmi_3-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Samsung TV HDMI 3',
    }),
    'context': <ANY>,
    'entity_id': 'button.samsung_tv_hdmi_3',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.samsung_tv_hdmi_4-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.samsung_tv_hdmi_4',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'HDMI 4',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'HDMI 4',
    'platform': 'samsung_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'hdmi_4',
    'unique_id': '01JTEST0000000000000000000_hdmi_4',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.samsung_tv_hdmi_4-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Samsung TV HDMI 4',
    }),
    'context': <ANY>,
    'entity_id': 'button.samsung_tv_hdmi_4',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.samsung_tv_home-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.samsung_tv_home',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Home',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Home',
    'platform': 'samsung_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'home',
    'unique_id': '01JTEST0000000000000000000_home',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.samsung_tv_home-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Samsung TV Home',
    }),
    'context': <ANY>,
    'entity_id': 'button.samsung_tv_home',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.samsung_tv_info-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.samsung_tv_info',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Info',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Info',
    'platform': 'samsung_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'info',
    'unique_id': '01JTEST0000000000000000000_info',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.samsung_tv_info-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Samsung TV Info',
    }),
    'context': <ANY>,
    'entity_id': 'button.samsung_tv_info',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.samsung_tv_left-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.samsung_tv_left',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Left',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Left',
    'platform': 'samsung_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'left',
    'unique_id': '01JTEST0000000000000000000_left',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.samsung_tv_left-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Samsung TV Left',
    }),
    'context': <ANY>,
    'entity_id': 'button.samsung_tv_left',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.samsung_tv_mute-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.samsung_tv_mute',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Mute',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Mute',
    'platform': 'samsung_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'mute',
    'unique_id': '01JTEST0000000000000000000_mute',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.samsung_tv_mute-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Samsung TV Mute',
    }),
    'context': <ANY>,
    'entity_id': 'button.samsung_tv_mute',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.samsung_tv_number_0-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.samsung_tv_number_0',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Number 0',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Number 0',
    'platform': 'samsung_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'num_0',
    'unique_id': '01JTEST0000000000000000000_num_0',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.samsung_tv_number_0-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Samsung TV Number 0',
    }),
    'context': <ANY>,
    'entity_id': 'button.samsung_tv_number_0',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.samsung_tv_number_1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.samsung_tv_number_1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Number 1',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Number 1',
    'platform': 'samsung_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'num_1',
    'unique_id': '01JTEST0000000000000000000_num_1',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.samsung_tv_number_1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Samsung TV Number 1',
    }),
    'context': <ANY>,
    'entity_id': 'button.samsung_tv_number_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.samsung_tv_number_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.samsung_tv_number_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Number 2',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Number 2',
    'platform': 'samsung_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'num_2',
    'unique_id': '01JTEST0000000000000000000_num_2',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.samsung_tv_number_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Samsung TV Number 2',
    }),
    'context': <ANY>,
    'entity_id': 'button.samsung_tv_number_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.samsung_tv_number_3-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.samsung_tv_number_3',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Number 3',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Number 3',
    'platform': 'samsung_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'num_3',
    'unique_id': '01JTEST0000000000000000000_num_3',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.samsung_tv_number_3-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Samsung TV Number 3',
    }),
    'context': <ANY>,
    'entity_id': 'button.samsung_tv_number_3',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.samsung_tv_number_4-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.samsung_tv_number_4',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Number 4',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Number 4',
    'platform': 'samsung_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'num_4',
    'unique_id': '01JTEST0000000000000000000_num_4',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.samsung_tv_number_4-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Samsung TV Number 4',
    }),
    'context': <ANY>,
    'entity_id': 'button.samsung_tv_number_4',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.samsung_tv_number_5-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.samsung_tv_number_5',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Number 5',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Number 5',
    'platform': 'samsung_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'num_5',
    'unique_id': '01JTEST0000000000000000000_num_5',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.samsung_tv_number_5-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Samsung TV Number 5',
    }),
    'context': <ANY>,
    'entity_id': 'button.samsung_tv_number_5',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.samsung_tv_number_6-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.samsung_tv_number_6',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Number 6',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Number 6',
    'platform': 'samsung_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'num_6',
    'unique_id': '01JTEST0000000000000000000_num_6',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.samsung_tv_number_6-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Samsung TV Number 6',
    }),
    'context': <ANY>,
    'entity_id': 'button.samsung_tv_number_6',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.samsung_tv_number_7-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.samsung_tv_number_7',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Number 7',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Number 7',
    'platform': 'samsung_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'num_7',
    'unique_id': '01JTEST0000000000000000000_num_7',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.samsung_tv_number_7-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Samsung TV Number 7',
    }),
    'context': <ANY>,
    'entity_id': 'button.samsung_tv_number_7',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.samsung_tv_number_8-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.samsung_tv_number_8',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Number 8',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Number 8',
    'platform': 'samsung_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'num_8',
    'unique_id': '01JTEST0000000000000000000_num_8',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.samsung_tv_number_8-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Samsung TV Number 8',
    }),
    'context': <ANY>,
    'entity_id': 'button.samsung_tv_number_8',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.samsung_tv_number_9-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.samsung_tv_number_9',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Number 9',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Number 9',
    'platform': 'samsung_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'num_9',
    'unique_id': '01JTEST0000000000000000000_num_9',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.samsung_tv_number_9-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Samsung TV Number 9',
    }),
    'context': <ANY>,
    'entity_id': 'button.samsung_tv_number_9',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.samsung_tv_ok-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.samsung_tv_ok',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'OK',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'OK',
    'platform': 'samsung_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'ok',
    'unique_id': '01JTEST0000000000000000000_ok',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.samsung_tv_ok-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Samsung TV OK',
    }),
    'context': <ANY>,
    'entity_id': 'button.samsung_tv_ok',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.samsung_tv_power-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.samsung_tv_power',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Power',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Power',
    'platform': 'samsung_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'power',
    'unique_id': '01JTEST0000000000000000000_power',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.samsung_tv_power-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Samsung TV Power',
    }),
    'context': <ANY>,
    'entity_id': 'button.samsung_tv_power',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.samsung_tv_power_off-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.samsung_tv_power_off',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Power off',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Power off',
    'platform': 'samsung_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'power_off',
    'unique_id': '01JTEST0000000000000000000_power_off',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.samsung_tv_power_off-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Samsung TV Power off',
    }),
    'context': <ANY>,
    'entity_id': 'button.samsung_tv_power_off',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.samsung_tv_return-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.samsung_tv_return',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Return',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Return',
    'platform': 'samsung_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'return',
    'unique_id': '01JTEST0000000000000000000_return',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.samsung_tv_return-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Samsung TV Return',
    }),
    'context': <ANY>,
    'entity_id': 'button.samsung_tv_return',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.samsung_tv_right-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.samsung_tv_right',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Right',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Right',
    'platform': 'samsung_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'right',
    'unique_id': '01JTEST0000000000000000000_right',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.samsung_tv_right-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Samsung TV Right',
    }),
    'context': <ANY>,
    'entity_id': 'button.samsung_tv_right',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.samsung_tv_settings-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.samsung_tv_settings',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Settings',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Settings',
    'platform': 'samsung_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'settings',
    'unique_id': '01JTEST0000000000000000000_settings',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.samsung_tv_settings-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Samsung TV Settings',
    }),
    'context': <ANY>,
    'entity_id': 'button.samsung_tv_settings',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.samsung_tv_source-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.samsung_tv_source',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Source',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Source',
    'platform': 'samsung_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'source',
    'unique_id': '01JTEST0000000000000000000_source',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.samsung_tv_source-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Samsung TV Source',
    }),
    'context': <ANY>,
    'entity_id': 'button.samsung_tv_source',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.samsung_tv_up-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.samsung_tv_up',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Up',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Up',
    'platform': 'samsung_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'up',
    'unique_id': '01JTEST0000000000000000000_up',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.samsung_tv_up-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Samsung TV Up',
    }),
    'context': <ANY>,
    'entity_id': 'button.samsung_tv_up',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.samsung_tv_volume_down-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.samsung_tv_volume_down',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Volume down',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Volume down',
    'platform': 'samsung_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'volume_down',
    'unique_id': '01JTEST0000000000000000000_volume_down',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.samsung_tv_volume_down-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Samsung TV Volume down',
    }),
    'context': <ANY>,
    'entity_id': 'button.samsung_tv_volume_down',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.samsung_tv_volume_up-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.samsung_tv_volume_up',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Volume up',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Volume up',
    'platform': 'samsung_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'volume_up',
    'unique_id': '01JTEST0000000000000000000_volume_up',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.samsung_tv_volume_up-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Samsung TV Volume up',
    }),
    'context': <ANY>,
    'entity_id': 'button.samsung_tv_volume_up',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
